--- a/package.json
+++ b/package.json
@@ -23,9 +23,5 @@
   ],
   "author": "Mihail Stoykov",
   "license": "ISC",
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "faker": "^5.5.3",
-    "xml2js": "^0.4.19"
-  }
+  "dependencies": {}
 }
